--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							class="razorpay-embed-btn"
 							data-url="https://rzp.io/l/2UDUjErqa"
 							data-text="Donate"
-							data-color="#528FF0"
+							data-color="#0a58d6"
 							data-size="large"
 						>
 							<script>
